Refatoração e 2/3 implementação de segurança ok