@@ -28,6 +28,16 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- ======================================================= -->
+        <!-- CORREÇÃO 1: Adicionando a dependência que estava faltando -->
+        <!-- ======================================================= -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <!-- ======================================================= -->
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -48,6 +58,12 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>17</release>
+                    <!-- ======================================================= -->
+                    <!-- CORREÇÃO 2: Adicionando permissão para o COMPILADOR     -->
+                    <!-- ======================================================= -->
+                    <compilerArgs>
+                        <arg>--add-exports=javafx.graphics/com.sun.javafx.application=br.com.carlos.bibliotecafx</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -56,9 +72,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>br.com.carlos.bibliotecafx.App</mainClass>
+                    <!-- Aponta para o Launcher para usar o Preloader -->
+                    <mainClass>br.com.carlos.bibliotecafx.main.Launcher</mainClass>
                     <options>
-                        <option>--add-opens=br.com.carlos.bibliotecafx/br.com.carlos.bibliotecafx.DTO=ALL-UNNAMED</option>
+                        <!-- ======================================================= -->
+                        <!-- CORREÇÃO 3: Adicionando permissão para a EXECUÇÃO       -->
+                        <!-- ======================================================= -->
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.application=br.com.carlos.bibliotecafx
+                        </option>
                     </options>
                 </configuration>
                 <executions>
